apply plugin: 'com.android.application'

android {
    compileSdkVersion 30
    defaultConfig {
        applicationId "com.offsec.nhview"
        minSdkVersion 24

        /*
         * Do not increase targetSdkVersion
         * Android does not allow to manage socket
         * owned by other userId if targetSdkVersion is 29+
         */
        //noinspection ExpiredTargetSdkVersion,OldTargetApi
        targetSdkVersion 28
        versionCode 10
        versionName "1.02.06"
    }

    signingConfigs {
      debug {
        storeFile file('nethunter-debug.jks')
        keyAlias 'nethunter'
        storePassword 'nethunter'
        keyPassword 'nethunter'
      }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }

        debug {
            signingConfig signingConfigs.debug
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    externalNativeBuild {
        ndkBuild {
            path "src/main/jni/Android.mk"
        }
    }

    sourceSets {
        main {
            jniLibs.srcDirs 'src/main/jni/prebuilt'
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation project(path: ':common')
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'androidx.annotation:annotation:1.5.0'
    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
}
